<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="24dp"
    android:scrollbars="none"
    android:background="@drawable/sign_in_background"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/Tunisie_Telecom"
            android:textColor="@color/primary_text"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="login To continue"
            android:textColor="@color/secondary_text"
            android:textSize="12sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="318dp"
            android:layout_height="52dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/background_input"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/Email"
            android:textColor="@color/primary_text"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="323dp"
            android:layout_height="55dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_input"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/Password"
            android:textColor="@color/primary_text"
            android:textSize="13sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/SignIn_btn"
            android:layout_width="333dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/Sign_In"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:textStyle="bold"
             />


    </LinearLayout>




</ScrollView>


