<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="24dp"
    android:scrollbars="none"
    tools:context=".activity_tache"
    android:background="@drawable/sign_in_background">


    <ImageView
        android:id="@+id/tache_img1"
        android:layout_width="294dp"
        android:layout_height="61dp"
        android:layout_marginTop="136dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/recta5"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/tache_img2"
        android:layout_width="105dp"
        android:layout_height="69dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.996"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/telecomlogo"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/tache_img3"
        android:layout_width="294dp"
        android:layout_height="61dp"
        android:layout_marginTop="208dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/recta5"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/tache_img4"
        android:layout_width="294dp"
        android:layout_height="61dp"
        android:layout_marginTop="440dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/recta5"
        tools:ignore="DuplicateIds,MissingConstraints" />

    <ImageView
        android:id="@+id/tache_img5"
        android:layout_width="294dp"
        android:layout_height="61dp"
        android:layout_marginTop="292dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/recta5"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/tache_img6"
        android:layout_width="294dp"
        android:layout_height="61dp"
        android:layout_marginTop="368dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/recta5"
        tools:ignore="DuplicateIds,MissingConstraints" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="294dp"
        android:layout_height="61dp"
        android:layout_marginTop="512dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.572"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/recta5"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tache_img7"
        android:layout_width="228dp"
        android:layout_height="48dp"
        android:layout_marginTop="144dp"
        android:text="@string/installation_et_paramétrage_des_équipements_matériels"
        android:textColor="@color/primary_text"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tache_img8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:text="@string/prise_en_charge_des_incidents"
        android:textColor="@color/primary_text"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tache_img9"
        android:layout_width="200dp"
        android:layout_height="43dp"
        android:layout_marginTop="308dp"
        android:text="@string/préparer_les_matériels"
        android:textColor="@color/primary_text"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.559"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tache_img10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="384dp"
        android:text="@string/Réaliser_des_câblage"
        android:textColor="@color/primary_text"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tache_img11"
        android:layout_width="205dp"
        android:layout_height="40dp"
        android:layout_marginTop="452dp"
        android:text="@string/Mettre_en_place_des_outils_de_surveillance_réseau"
        android:textColor="@color/primary_text"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.543"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tache_img12"
        android:layout_width="184dp"
        android:layout_height="44dp"
        android:layout_marginTop="524dp"
        android:text="@string/Effectuer_les_tests_pour_la_validation_des_installations"
        android:textColor="@color/primary_text"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>